--- a/blog/_layouts/default.html
+++ b/blog/_layouts/default.html
@@ -2,17 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>{{ page.title }} | Bizznist</title>
+  <title>{{ page.title }} | {{ site.title }}</title>
   <meta name="description" content="{{ page.description | default: site.description }}">
-  <link rel="stylesheet" href="/assets/css/main.css"> <!-- main site CSS -->
+  <link rel="stylesheet" href="/assets/css/main.css"> <!-- Main site CSS -->
 </head>
-  <header></header>
 <body>
   {% include header.html %}
+
   <main>
     {{ content }}
   </main>
+
   {% include footer.html %}
 </body>
-  <footer></footer>
 </html>
