--- a/blog/_layouts/default.html
+++ b/blog/_layouts/default.html
@@ -2,17 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>{{ page.title }} | {{ site.title }}</title>
+  <title>{{ page.title }} | BizzNist</title>
   <meta name="description" content="{{ page.description | default: site.description }}">
-  <link rel="stylesheet" href="/assets/css/main.css"> <!-- Main site CSS -->
+  <link rel="stylesheet" href="/assets/css/main.css"> <!-- Bizznist main CSS -->
 </head>
 <body>
+
   {% include header.html %}
 
-  <main>
+  <main class="blog-container">
     {{ content }}
   </main>
 
   {% include footer.html %}
+
 </body>
 </html>
