--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -1,1 +1,31 @@
+<div class="row gy-4">
+  {% for post in site.posts %}
+  <div class="col-12">
+    <article>
+      {% if post.image %}
+      <div class="post-img">
+        <img src="{{ post.image }}" alt="{{ post.title }}" class="img-fluid">
+      </div>
+      {% endif %}
 
+      <h2 class="title">
+        <a href="{{ post.url }}">{{ post.title }}</a>
+      </h2>
+
+      <div class="meta-top">
+        <ul>
+          <li><i class="bi bi-person"></i> {{ post.author | default: "Admin" }}</li>
+          <li><i class="bi bi-clock"></i> <time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%b %d, %Y" }}</time></li>
+        </ul>
+      </div>
+
+      <div class="content">
+        <p>{{ post.excerpt | strip_html | truncate: 200 }}</p>
+        <div class="read-more">
+          <a href="{{ post.url }}">Read More</a>
+        </div>
+      </div>
+    </article>
+  </div>
+  {% endfor %}
+</div>
