--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -1,31 +1,53 @@
-<div class="row gy-4">
-  {% for post in site.posts %}
-  <div class="col-12">
-    <article>
-      {% if post.image %}
-      <div class="post-img">
-        <img src="{{ post.image }}" alt="{{ post.title }}" class="img-fluid">
-      </div>
-      {% endif %}
+---
+layout: default
+---
 
-      <h2 class="title">
-        <a href="{{ post.url }}">{{ post.title }}</a>
-      </h2>
+<section id="blog" class="blog">
+  <div class="container" data-aos="fade-up">
 
-      <div class="meta-top">
-        <ul>
-          <li><i class="bi bi-person"></i> {{ post.author | default: "Admin" }}</li>
-          <li><i class="bi bi-clock"></i> <time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%b %d, %Y" }}</time></li>
-        </ul>
-      </div>
+    <div class="section-header">
+      <h2>Blog</h2>
+      <p>Latest insights from <span>BizzNist</span></p>
+    </div>
 
-      <div class="content">
-        <p>{{ post.excerpt | strip_html | truncate: 200 }}</p>
-        <div class="read-more">
-          <a href="{{ post.url }}">Read More</a>
-        </div>
+    <div class="row gy-4 posts-list">
+
+      {% for post in site.posts %}
+      <div class="col-xl-4 col-md-6">
+        <article>
+
+          {% if post.image %}
+          <div class="post-img">
+            <img src="{{ post.image }}" alt="{{ post.title }}" class="img-fluid">
+          </div>
+          {% endif %}
+
+          <h2 class="title">
+            <a href="{{ post.url }}">{{ post.title }}</a>
+          </h2>
+
+          <div class="meta-top">
+            <ul>
+              <li><i class="bi bi-person"></i> {{ post.author | default: "Admin" }}</li>
+              <li><i class="bi bi-clock"></i>
+                <time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%b %d, %Y" }}</time>
+              </li>
+            </ul>
+          </div>
+
+          <div class="content">
+            <p>{{ post.excerpt | strip_html | truncate: 160 }}</p>
+          </div>
+
+          <div class="read-more">
+            <a href="{{ post.url }}">Read More</a>
+          </div>
+
+        </article>
       </div>
-    </article>
+      {% endfor %}
+
+    </div>
+
   </div>
-  {% endfor %}
-</div>
+</section>
