--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,17 +10,17 @@
   {% seo %}
 
   <!-- Favicon -->
-  <link href="/assets/img/favicon.png" rel="icon">
+  <link href="https://www.bizznist.com/assets/img/favicon.png" rel="icon">
 
   <!-- Vendor CSS Files -->
-  <link href="/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="/assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="https://www.bizznist.com/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://www.bizznist.com/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="https://www.bizznist.com/assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="https://www.bizznist.com/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="https://www.bizznist.com/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
-  <link href="/assets/css/style.css" rel="stylesheet">
+  <link href="https://www.bizznist.com/assets/css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -37,19 +37,19 @@
   {% include footer.html %}
   <!-- End Footer -->
 
-  <a href="#" class="scroll-top d-flex align-items-center justify-content-center">
+  <a href="/" class="scroll-top d-flex align-items-center justify-content-center">
     <i class="bi bi-arrow-up-short"></i>
   </a>
 
   <!-- Vendor JS Files -->
-  <script src="/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="/assets/vendor/aos/aos.js"></script>
-  <script src="/assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="/assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="/assets/vendor/php-email-form/validate.js"></script>
+  <script src="https://www.bizznist.com/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="https://www.bizznist.com/assets/vendor/aos/aos.js"></script>
+  <script src="https://www.bizznist.com/assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="https://www.bizznist.com/assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="https://www.bizznist.com/assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Main JS File -->
-  <script src="/assets/js/main.js"></script>
+  <script src="https://www.bizznist.com/assets/js/main.js"></script>
 
 </body>
 </html>
