--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
   <link href="https://www.bizznist.com/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
-  <link href="https://www.bizznist.com/assets/css/style.css" rel="stylesheet">
+  <link href="https://www.bizznist.com/assets/css/main.css" rel="stylesheet">
 </head>
 
 <body>
