--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,10 @@
   {% include header.html %}
   <!-- End Header -->
 
-  <main id="main">
+  <main id="main" style="
+    padding-top: 100px;
+    padding-left: 75px;
+    padding-right: 75px;">
     {{ content }}
   </main>
 
