--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,6 +36,17 @@
     {{ content }}
   </main>
 
+<style>
+  /* Mobile screens (max width 768px) */
+@media (max-width: 768px) {
+  #main {
+    padding-top: 100px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
+</style>
+
   <!-- ======= Footer ======= -->
   {% include footer.html %}
   <!-- End Footer -->
