--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,8 +8,8 @@
         <div class="footer-contact pt-3">
           <p>Mundka, Delhi</p>
           <p>India, 110081</p>
-          <p class="mt-3"><strong>Phone:</strong> <span><a href="tel:+919210481163">+91 9210481163</a></span></p>
-          <p><strong>Email:</strong> <span><a href="mailto:bizznist@gmail.com">bizznist@gmail.com</a></span></p>
+          <p class="mt-3"><strong>Phone:</strong><a href="tel:+919210481163">+91 9210481163</a></p>
+          <p><strong>Email:</strong><a href="mailto:bizznist@gmail.com">bizznist@gmail.com</a></p>
         </div>
       </div>
 
