--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -51,3 +51,11 @@
     </div>
   </div>
 </footer>
+
+
+<style>
+  .footer .footer-about a {
+    font-size: 15px !important;
+    font-weight: 500 !important;
+  }
+  </style>
