--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
     <div class="row gy-4">
       <div class="col-lg-4 col-md-6 footer-about">
         <a href="/" class="d-flex align-items-center">
-          <span class="sitename">BizzNist</span>
+          <span class="sitename" style="font-size: 26px; font-weight: 600;">BizzNist</span>
         </a>
         <div class="footer-contact pt-3">
           <p>Mundka, Delhi</p>
