--- a/blog/_layouts/post.html
+++ b/blog/_layouts/post.html
@@ -2,10 +2,73 @@
 layout: default
 ---
 
-<article class="blog-post">
-  <h1>{{ page.title }}</h1>
-  <p class="date">{{ page.date | date: "%B %d, %Y" }}</p>
-  <div class="content">
-    {{ content }}
+<section id="blog" class="blog section">
+  <div class="container" data-aos="fade-up">
+
+    <div class="row g-5">
+
+      <!-- Blog Content -->
+      <div class="col-lg-8">
+
+        <article class="blog-details">
+
+          {% if page.image %}
+          <div class="post-img">
+            <img src="{{ page.image | relative_url }}" alt="{{ page.title }}" class="img-fluid">
+          </div>
+          {% endif %}
+
+          <h2 class="title">{{ page.title }}</h2>
+
+          <div class="meta-top">
+            <ul>
+              <li class="d-flex align-items-center">
+                <i class="bi bi-person"></i> {{ page.author | default: "BizzNist Team" }}
+              </li>
+              <li class="d-flex align-items-center">
+                <i class="bi bi-clock"></i> {{ page.date | date: "%B %d, %Y" }}
+              </li>
+            </ul>
+          </div><!-- End meta top -->
+
+          <div class="content">
+            {{ content }}
+          </div><!-- End post content -->
+
+        </article><!-- End blog post -->
+
+      </div>
+
+      <!-- Sidebar -->
+      <div class="col-lg-4">
+
+        <div class="sidebar">
+
+          <div class="sidebar-item recent-posts">
+            <h3 class="sidebar-title">Recent Posts</h3>
+
+            <div class="mt-3">
+              {% for post in site.posts limit:5 %}
+              <div class="post-item mt-3">
+                {% if post.image %}
+                <img src="{{ post.image | relative_url }}" alt="{{ post.title }}" class="flex-shrink-0">
+                {% endif %}
+                <div>
+                  <h4><a href="{{ post.url | relative_url }}">{{ post.title }}</a></h4>
+                  <time datetime="{{ post.date | date_to_xmlschema }}">
+                    {{ post.date | date: "%B %d, %Y" }}
+                  </time>
+                </div>
+              </div>
+              {% endfor %}
+            </div>
+          </div><!-- End recent posts -->
+
+        </div><!-- End sidebar -->
+
+      </div><!-- End col-lg-4 -->
+
+    </div><!-- End row -->
+
   </div>
-</article>
+</section>
