--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,33 +2,147 @@
 layout: default
 ---
 
-<section id="blog-details" class="blog-details">
-  <div class="container" data-aos="fade-up">
+<main class="main">
 
-    <article class="blog-details">
-
-      {% if page.image %}
-      <div class="post-img">
-        <img src="{{ page.image }}" alt="{{ page.title }}" class="img-fluid">
+  <!-- Page Title -->
+  <div class="page-title">
+    <div class="heading">
+      <div class="container">
+        <div class="row d-flex justify-content-center text-center">
+          <div class="col-lg-8">
+            <h1>{{ page.title }}</h1>
+          </div>
+        </div>
       </div>
-      {% endif %}
-
-      <h2 class="title">{{ page.title }}</h2>
-
-      <div class="meta-top">
-        <ul>
-          <li><i class="bi bi-person"></i> {{ page.author | default: "Admin" }}</li>
-          <li><i class="bi bi-clock"></i>
-            <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%B %d, %Y" }}</time>
-          </li>
-        </ul>
+    </div>
+    <nav class="breadcrumbs">
+      <div class="container">
+        <ol>
+          <li><a href="{{ "/" | relative_url }}">Home</a></li>
+          <li><a href="{{ "/blog/" | relative_url }}">Blog</a></li>
+          <li class="current">{{ page.title }}</li>
+        </ol>
       </div>
-
-      <div class="content">
-        {{ content }}
-      </div>
-
-    </article>
-
+    </nav>
   </div>
-</section>
+  <!-- End Page Title -->
+
+  <div class="container">
+    <div class="row">
+
+      <div class="col-lg-8">
+
+        <!-- Blog Details Section -->
+        <section id="blog-details" class="blog-details section">
+          <div class="container">
+
+            <article class="article">
+
+              {% if page.image %}
+              <div class="post-img">
+                <img src="{{ page.image | relative_url }}" alt="{{ page.title }}" class="img-fluid">
+              </div>
+              {% endif %}
+
+              <div class="meta-top">
+                <ul>
+                  <li class="d-flex align-items-center">
+                    <i class="bi bi-person"></i>
+                    {{ page.author | default: "Reema Roy" }}
+                  </li>
+                  <li class="d-flex align-items-center">
+                    <i class="bi bi-clock"></i>
+                    <time datetime="{{ page.date | date_to_xmlschema }}">
+                      {{ page.date | date: "%B %d, %Y" }}
+                    </time>
+                  </li>
+                </ul>
+              </div>
+
+              <div class="content">
+                {{ content }}
+              </div>
+
+            </article>
+
+          </div>
+        </section>
+        <!-- End Blog Details -->
+
+      </div>
+
+      <!-- Sidebar (Optional, if you want one) -->
+      <div class="col-lg-4">
+        <div class="sidebar">
+
+          <h3 class="sidebar-title">Recent Posts</h3>
+          <div class="sidebar-item recent-posts">
+            {% for post in site.posts limit:5 %}
+            <div class="post-item clearfix">
+              {% if post.image %}
+              <img src="{{ post.image | relative_url }}" alt="{{ post.title }}">
+              {% endif %}
+              <h4><a href="{{ post.url | relative_url }}">{{ post.title }}</a></h4>
+              <time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%b %d, %Y" }}</time>
+            </div>
+            {% endfor %}
+          </div>
+
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+</main>
+
+<style>
+  .page-title .heading {
+    padding-bottom: 40px;
+  }
+
+  .blog-details .content blockquote {
+    padding: 30px;
+    text-align: left;
+    margin: 10px 0;
+  }
+
+  /* Table Styling (matches your uploaded file) */
+  table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 1.5rem 0;
+    font-size: 16px;
+    line-height: 1.6;
+  }
+  thead { background-color: #f5f5f5; }
+  th, td {
+    padding: 12px 15px;
+    border: 1px solid #ddd;
+    text-align: left;
+  }
+  tr:hover { background-color: #f0f8ff; }
+
+  @media (max-width: 768px) {
+    table, thead, tbody, th, td, tr {
+      display: block;
+      width: 100%;
+    }
+    thead { display: none; }
+    td {
+      position: relative;
+      padding-left: 50%;
+    }
+    td::before {
+      position: absolute;
+      top: 12px;
+      left: 15px;
+      width: 45%;
+      white-space: nowrap;
+      font-weight: bold;
+    }
+    td:nth-of-type(1)::before { content: "Feature"; }
+    td:nth-of-type(2)::before { content: "Before"; }
+    td:nth-of-type(3)::before { content: "With Soft Navigations API"; }
+  }
+</style>
