--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -73,3 +73,21 @@ layout: default
   </div>
 
 </main>
+
+
+<style>
+  .thumbnail-container {
+  width: 100%;
+  max-width: 800px;
+  margin: 0 auto;
+  overflow: hidden;
+}
+
+.thumbnail {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  display: block;
+}
+
+  </style>
