--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -108,4 +108,18 @@ layout: default
   display: block;
 }
 
+      @media screen and (max-width: 768px) {
+        .heading {    
+          padding-top: 10px;
+          padding-bottom: 10px;
+        }
+        .article {
+          padding-left: 0px;
+          padding-right: 0px;
+        }
+        .blog-details .article {
+          box-shadow: 0 0px 0px rgba(0, 0, 0, 0);
+        }
+    }
+  
   </style>
