--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -110,15 +110,15 @@ layout: default
 
       @media screen and (max-width: 768px) {
         .heading {    
-          padding-top: 10px;
-          padding-bottom: 10px;
+          padding-top: 10px !important;
+          padding-bottom: 10px !important;
         }
         .article {
-          padding-left: 0px;
-          padding-right: 0px;
+          padding-left: 0px !important;
+          padding-right: 0px !important;
         }
         .blog-details .article {
-          box-shadow: 0 0px 0px rgba(0, 0, 0, 0);
+          box-shadow: 0 0px 0px rgba(0, 0, 0, 0) !important;
         }
     }
   
