--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -120,6 +120,16 @@ layout: default
         .blog-details .article {
           box-shadow: 0 0px 0px rgba(0, 0, 0, 0) !important;
         }
+        .page-title nav ol {
+          padding-left: 0px !important;
+        }
+        .blog-details {
+          padding-top: 0px !important;
+          padding-bottom: 0px !important;
+        }
+        .blog-details .meta-top ul {
+          line-height: 2;
+        }
     }
   
   </style>
