--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ layout: default
   <!-- Page Title -->
   <div class="page-title">
     <div class="heading">
-      <div class="container">
+      <div class="container" style="padding-left: 0px; padding-right: 0px;">
         <div class="row d-flex justify-content-center text-center">
           <div class="col-lg-8">
             <h1>{{ page.title }}</h1>
@@ -129,6 +129,9 @@ layout: default
         }
         .blog-details .meta-top ul {
           line-height: 2;
+        }
+        .article {
+          padding-top: 10px !important;
         }
     }
   
