--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,7 +26,7 @@ layout: default
     </nav>
   </div><!-- End Page Title -->
 
-  <div class="container" style="padding-left: 0px; padding-right: 0px;">
+  <div class="container">
     <div class="row">
 
       <div class="col-lg-8">
@@ -132,6 +132,10 @@ layout: default
         }
         .article {
           padding-top: 10px !important;
+        }
+        .container row {
+          padding-left: 0px; 
+          padding-right: 0px;
         }
     }
   
