--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -133,7 +133,7 @@ layout: default
         .article {
           padding-top: 10px !important;
         }
-        .container row {
+        .container {
           padding-left: 0px; 
           padding-right: 0px;
         }
