--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -121,7 +121,8 @@ layout: default
           box-shadow: 0 0px 0px rgba(0, 0, 0, 0) !important;
         }
         .page-title nav ol {
-          padding-left: 0px !important;
+          padding-left: 10px !important;
+          padding-right: 10px !important;
         }
         .blog-details {
           padding-top: 0px !important;
@@ -137,6 +138,7 @@ layout: default
           padding-left: 0px; 
           padding-right: 0px;
         }
+        
     }
   
   </style>
