--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -108,6 +108,25 @@ layout: default
   display: block;
 }
 
+.heading {    
+  padding-top: 20px !important;
+  padding-bottom: 20px !important;
+}
+.blog-details {
+  padding-top: 20px !important;
+  padding-bottom: 20px !important;
+}
+ .blog-details .article {
+   padding-top: 10px !important;
+ } 
+ .blog-details .meta-top {
+   margin-top: 0 !important;
+   line-height: 2;
+ } 
+  .col-lg-8 {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
       @media screen and (max-width: 768px) {
         .heading {    
           padding-top: 10px !important;
