--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -85,6 +85,11 @@ layout: default
           </div>
         </section><!-- End Blog Details Section -->
 
+        <div class="col-lg-4 sidebar">
+      {% include sidebar.html %}
+    </div>
+
+
       </div>
 
     </div>
