--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -132,6 +132,11 @@ layout: default
     padding-left: 0px;
     padding-right: 0px;
   }
+.widgets-container {
+    margin-top: 20px;
+}
+
+  
       @media screen and (max-width: 768px) {
         .heading {    
           padding-top: 10px !important;
