--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -169,5 +169,12 @@ layout: default
         }
         
     }
-  
+  .content img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  display: block;
+  margin: 1rem auto;   /* optional, centers the image */
+  border-radius: 8px;  /* optional, same style as thumbnail */
+}
   </style>
