--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,29 +8,27 @@
         <div class="footer-contact pt-3">
           <p>Mundka, Delhi</p>
           <p>India, 110081</p>
-          <p class="mt-3"><strong>Phone:</strong><a href="tel:+919210481163">+91 9210481163</a></p>
-          <p><strong>Email:</strong><a href="mailto:bizznist@gmail.com">bizznist@gmail.com</a></p>
+          <p class="mt-3"><strong>Phone: </strong><a href="tel:+919210481163">+91 9210481163</a></p>
+          <p><strong>Email: </strong><a href="mailto:bizznist@gmail.com">bizznist@gmail.com</a></p>
         </div>
       </div>
 
       <div class="col-lg-2 col-md-3 footer-links">
         <h4>Useful Links</h4>
         <ul>
-          <li><i class="bi bi-chevron-right"></i> <a href="/">Home</a></li>
-          <li><i class="bi bi-chevron-right"></i> <a href="/about-us" target="_blank">About us</a></li>
           <li><i class="bi bi-chevron-right"></i> <a href="/services" target="_blank">Services</a></li>
-          <li><i class="bi bi-chevron-right"></i> <a href="https://gyaansaar.bizznist.com/knowledge-base" target="_blank">Resource Center</a></li>
+          <li><i class="bi bi-chevron-right"></i> <a href="/blog" target="_blank">Resource Center</a></li>
+          <li><i class="bi bi-chevron-right"></i> <a href="/about-us" target="_blank">About us</a></li>
           <li><i class="bi bi-chevron-right"></i> <a href="/terms-of-service" target="_blank">Terms of service</a></li>
+          <li><i class="bi bi-chevron-right"></i> <a href="/privacy-policy" target="_blank">Privacy Policy</a></li>
         </ul>
       </div>
 
       <div class="col-lg-2 col-md-3 footer-links">
         <h4>Our Services</h4>
         <ul>
-          <li><i class="bi bi-chevron-right"></i> <a href="/website-development">Website Development</a></li>
-          <li><i class="bi bi-chevron-right"></i> <a href="/seo-and-digital-marketing">SEO & Digital Marketing</a></li>
-          <li><i class="bi bi-chevron-right"></i> <a href="/corporate-training-and-technical-documentation">Corporate Training & Technical Documentation</a></li>
-          <li><i class="bi bi-chevron-right"></i> <a href="/data-migration-and-it-consulting">Data Migration & IT Consulting</a></li>
+          <li><i class="bi bi-chevron-right"></i> <a href="/services/website-development/">Website Development</a></li>
+          <li><i class="bi bi-chevron-right"></i> <a href="/services/advertisement-management/">Advertisement Management</a></li>
         </ul>
       </div>
 
@@ -45,7 +43,7 @@
   </div>
 
   <div class="container copyright text-center mt-4">
-    <p>©2025<strong class="px-1 sitename"><a href="https://www.bizznist.com"> BizzNist</a></strong>All Rights Reserved</p>
+    <p>©2025<strong class="px-1 sitename"><a href="https://www.bizznist.com">BizzNist</a></strong>All Rights Reserved</p>
     <div class="credits">
       Designed by <a href="/">BizzNist</a>
     </div>
