--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,9 @@
+---
+layout: default
+sitemap: false
+robots: noindex
+---
+
 <footer id="footer" class="footer">
   <div class="container footer-top">
     <div class="row gy-4">
