--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -1,9 +1,3 @@
----
-layout: default
-sitemap: false
-robots: noindex
----
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,6 +5,7 @@ robots: noindex
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>{{ page.title }} - {{ site.title }}</title>
   <meta name="description" content="{{ site.description }}">
+  <meta name="robots" content="noindex, nofollow">
   <link href="{{ '/assets/img/favicon.png' | relative_url }}" rel="icon">
   <link href="{{ '/assets/vendor/bootstrap/css/bootstrap.min.css' | relative_url }}" rel="stylesheet">
   <link href="{{ '/assets/vendor/bootstrap-icons/bootstrap-icons.css' | relative_url }}" rel="stylesheet">
