--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,3 @@
----
-layout: default
-sitemap: false
-robots: noindex
----
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,6 +7,7 @@ robots: noindex
 <title>{{ page.meta_title | default: page.title }} | {{ site.title }}</title>
 <meta name="description" content="{{ page.meta_description | default: site.description }}">
 <meta name="keywords" content="{{ page.meta_keywords | join: ', ' }}">
+<meta name="robots" content="noindex, nofollow">
 <link rel="canonical" href="{{ site.url }}{{ page.url }}">
 {% seo %}
 
