--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -210,3 +210,24 @@ table tr:hover {
   background-color: #f1f7ff;
 }
 </style>
+
+<style>
+  /* Add spacing between paragraphs and list items */
+  ul, ol {
+    padding-left: 20px; /* indent nested lists nicely */
+    margin: 0; /* remove default margin */
+  }
+
+  li {
+    margin-bottom: 0.75em; /* space after each list item */
+  }
+
+  li p {
+    margin: 0 0 0.5em 0; /* space after paragraph inside list item */
+  }
+
+  ul ul, ol ul {
+    margin-top: 0.25em; /* small spacing for nested lists */
+    margin-bottom: 0.5em;
+  }
+</style>
