--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>{{ page.title }} - {{ site.title }}</title>
+  <title>Blog | BizzNist | IT Solutions, Website Development & Digital Services</title>
   <meta name="description" content="{{ site.description }}">
   <meta name="robots" content="noindex, nofollow">
   <link href="{{ '/assets/img/favicon.png' | relative_url }}" rel="icon">
