--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
             <li><a href="/services/advertisement-management">Advertisement Management</a></li>
           </ul>
         </li>
-        <li><a href="/blog" target="_blank">Blog</a></li>
+        <li><a href="/blog">Blog</a></li>
         <li><a href="/pricing">Pricing</a></li>
       </ul>
       <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
