--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,11 +16,11 @@
       <div class="col-lg-2 col-md-3 footer-links">
         <h4>Useful Links</h4>
         <ul>
-          <li><i class="bi bi-chevron-right"></i> <a href="/services" target="_blank">Services</a></li>
-          <li><i class="bi bi-chevron-right"></i> <a href="/blog" target="_blank">Resource Center</a></li>
-          <li><i class="bi bi-chevron-right"></i> <a href="/about-us" target="_blank">About us</a></li>
-          <li><i class="bi bi-chevron-right"></i> <a href="/terms-of-service" target="_blank">Terms of service</a></li>
-          <li><i class="bi bi-chevron-right"></i> <a href="/privacy-policy" target="_blank">Privacy Policy</a></li>
+          <li><i class="bi bi-chevron-right"></i> <a href="/services">Services</a></li>
+          <li><i class="bi bi-chevron-right"></i> <a href="/blog">Resource Center</a></li>
+          <li><i class="bi bi-chevron-right"></i> <a href="/about-us">About us</a></li>
+          <li><i class="bi bi-chevron-right"></i> <a href="/terms-of-service">Terms of service</a></li>
+          <li><i class="bi bi-chevron-right"></i> <a href="/privacy-policy">Privacy Policy</a></li>
         </ul>
       </div>
 
