--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,7 +19,7 @@
           <li><i class="bi bi-chevron-right"></i> <a href="/services">Services</a></li>
           <li><i class="bi bi-chevron-right"></i> <a href="/blog">Resource Center</a></li>
           <li><i class="bi bi-chevron-right"></i> <a href="/about-us">About us</a></li>
-          <li><i class="bi bi-chevron-right"></i> <a href="/terms-and-conditions">TermS and Conditions</a></li>
+          <li><i class="bi bi-chevron-right"></i> <a href="/terms-and-conditions">Terms and Conditions</a></li>
           <li><i class="bi bi-chevron-right"></i> <a href="/privacy-policy">Privacy Policy</a></li>
         </ul>
       </div>
