--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Blog | BizzNist | IT Solutions, Website Development & Digital Services</title>
-  <meta name="description" content="Explore expert blogs from Bizznist on business growth, IT services, website development, SEO, WordPress tips, and digital marketing strategies. Learn how to scale your business with actionable insights.">
-  <<meta name="keywords" content="business blog, IT solutions blog, digital marketing tips, WordPress tutorials, website development blog, SEO strategies, online advertising guide, business growth hacks, ecommerce tips India, Bizznist resources">
+  <title>Bizznist Blog | Digital Marketing & Website Development Tips</title>
+  <meta name="description" content="Read the latest insights on SEO, website design, IT solutions, and digital growth from the experts at Bizznist.">
+  <<meta name="keywords" content="SEO tips, website development blog, digital marketing insights, IT resources">
   <link href="{{ '/assets/img/favicon.png' | relative_url }}" rel="icon">
   <link href="{{ '/assets/vendor/bootstrap/css/bootstrap.min.css' | relative_url }}" rel="stylesheet">
   <link href="{{ '/assets/vendor/bootstrap-icons/bootstrap-icons.css' | relative_url }}" rel="stylesheet">
