--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -834,9 +834,9 @@ section,
 --------------------------------------------------------------*/
 .hero {
   width: 100%;
-  min-height: 100vh;
+  min-height: 90vh;
   position: relative;
-  padding: 0 0 0 0;
+  padding: 80px 0 0 0;
   display: flex;
   align-items: center;
   background: url(../img/hero-bg.png) top center no-repeat;
