--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -47,7 +47,7 @@ layout: default
                 <ul>
                   <li class="d-flex align-items-center">
                     <i class="bi bi-person"></i>
-                    {{ page.author | default: "Reema Roy" }}
+                    <a href="#">Reema Roy</a>
                   </li>
                   <li class="d-flex align-items-center">
                     <i class="bi bi-clock"></i>
