--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,6 +26,9 @@ layout: default
     </nav>
   </div><!-- End Page Title -->
 
+  <script async="async" data-cfasync="false" src="//pl27687451.revenuecpmgate.com/0a87f1b8f78366019c87f1e94c2638ae/invoke.js"></script>
+<div id="container-0a87f1b8f78366019c87f1e94c2638ae"></div>
+
   <div class="container">
     <div class="row">
 
@@ -96,6 +99,9 @@ layout: default
   </div>
 
 </main>
+
+<script async="async" data-cfasync="false" src="//pl27687451.revenuecpmgate.com/0a87f1b8f78366019c87f1e94c2638ae/invoke.js"></script>
+<div id="container-0a87f1b8f78366019c87f1e94c2638ae"></div>
 
 
 <style>
