--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,6 +9,16 @@
     </form>
   </div>
 
+  <script type="text/javascript">
+	atOptions = {
+		'key' : 'c3c66b8897b40480ed9ba5c6949a690d',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/c3c66b8897b40480ed9ba5c6949a690d/invoke.js"></script>
 
   <!-- Recent Posts Widget -->
 <div class="recent-posts-widget widget-item">
