--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,3 +26,14 @@
 
   </div>
 </header>
+
+<script type="text/javascript">
+	atOptions = {
+		'key' : 'c3c66b8897b40480ed9ba5c6949a690d',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/c3c66b8897b40480ed9ba5c6949a690d/invoke.js"></script>
