--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,15 @@
+<script type="text/javascript">
+	atOptions = {
+		'key' : 'c3c66b8897b40480ed9ba5c6949a690d',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/c3c66b8897b40480ed9ba5c6949a690d/invoke.js"></script>
+
+
 <footer id="footer" class="footer">
   <div class="container footer-top">
     <div class="row gy-4">
