--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,6 +35,17 @@
   {% include header.html %}
   <!-- End Header -->
 
+  <script type="text/javascript">
+	atOptions = {
+		'key' : 'c3c66b8897b40480ed9ba5c6949a690d',
+		'format' : 'iframe',
+		'height' : auto,
+		'width' : auto,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/c3c66b8897b40480ed9ba5c6949a690d/invoke.js"></script>
+
   <main id="main">
     {{ content }}
   </main>
