--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,6 +66,18 @@
 </style>
 
   <!-- ======= Footer ======= -->
+
+	<script type="text/javascript">
+	atOptions = {
+		'key' : 'c3c66b8897b40480ed9ba5c6949a690d',
+		'format' : 'iframe',
+		'height' : auto,
+		'width' : auto,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/c3c66b8897b40480ed9ba5c6949a690d/invoke.js"></script>
+	
   {% include footer.html %}
   <!-- End Footer -->
 
