--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,12 +35,12 @@
   {% include header.html %}
   <!-- End Header -->
 
-  <script type="text/javascript">
+ <script type="text/javascript">
 	atOptions = {
 		'key' : 'c3c66b8897b40480ed9ba5c6949a690d',
 		'format' : 'iframe',
-		'height' : auto,
-		'width' : auto,
+		'height' : 90,
+		'width' : 728,
 		'params' : {}
 	};
 </script>
@@ -71,8 +71,8 @@
 	atOptions = {
 		'key' : 'c3c66b8897b40480ed9ba5c6949a690d',
 		'format' : 'iframe',
-		'height' : auto,
-		'width' : auto,
+		'height' : 90,
+		'width' : 728,
 		'params' : {}
 	};
 </script>
