--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -72,6 +72,8 @@
   <!-- Main JS File -->
   <script src="https://www.bizznist.com/assets/js/main.js"></script>
 
+  <script type='text/javascript' src='//pl27688123.revenuecpmgate.com/a4/a0/e5/a4a0e5d0466ca41c2a7d78f1ab4dc22b.js'></script>
+
 </body>
 </html>
 
