--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -37,6 +37,8 @@
   "dateModified": "{{ page.date }}"
 }
 </script>
+
+    <script type='text/javascript' src='//pl27688065.revenuecpmgate.com/0a/29/6b/0a296bc48d714a706b5b1c92a678fa87.js'></script>
   
 </head>
 <body class="blog-page">
@@ -55,6 +57,9 @@
 
   <script src="{{ '/assets/vendor/bootstrap/js/bootstrap.bundle.min.js' | relative_url }}"></script>
   <script src="{{ '/assets/js/main.js' | relative_url }}"></script>
+
+  <script type='text/javascript' src='//pl27688123.revenuecpmgate.com/a4/a0/e5/a4a0e5d0466ca41c2a7d78f1ab4dc22b.js'></script>
+  
 </body>
 </html>
 
