--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,8 +25,16 @@ layout: default
     </nav>
   </div><!-- End Page Title -->
 
-  <script async="async" data-cfasync="false" src="//pl27687451.revenuecpmgate.com/0a87f1b8f78366019c87f1e94c2638ae/invoke.js"></script>
-<div id="container-0a87f1b8f78366019c87f1e94c2638ae"></div>
+<script type="text/javascript">
+	atOptions = {
+		'key' : 'c3c66b8897b40480ed9ba5c6949a690d',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//wormdistressedunit.com/c3c66b8897b40480ed9ba5c6949a690d/invoke.js"></script>
   
 
   <div class="container">
@@ -78,6 +86,8 @@ layout: default
   </div>
 {% endif %}
 
+              <script async="async" data-cfasync="false" src="//wormdistressedunit.com/0a87f1b8f78366019c87f1e94c2638ae/invoke.js"></script>
+<div id="container-0a87f1b8f78366019c87f1e94c2638ae"></div>
 
               <div class="content">
                 {{ content }}
@@ -95,9 +105,16 @@ layout: default
     </div>
   </div>
 
-
-  <script async="async" data-cfasync="false" src="//wormdistressedunit.com/0a87f1b8f78366019c87f1e94c2638ae/invoke.js"></script>
-<div id="container-0a87f1b8f78366019c87f1e94c2638ae"></div>
+  <script type="text/javascript">
+	atOptions = {
+		'key' : 'c3c66b8897b40480ed9ba5c6949a690d',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//wormdistressedunit.com/c3c66b8897b40480ed9ba5c6949a690d/invoke.js"></script>
 
   
 </main>
@@ -238,3 +255,26 @@ table tr:hover {
     margin-bottom: 0.5em;
   }
 </style>
+
+
+<style type="text/css">
+  .mobileShow {display: none;}
+
+  /* Smartphone Portrait and Landscape */
+  @media only screen
+    and (min-device-width : 320px)
+    and (max-device-width : 480px){ 
+      .mobileShow {display: inline;}
+  }
+  .mobileHide { display: inline; }
+
+  /* Smartphone Portrait and Landscape */
+  @media only screen
+    and (min-device-width : 320px)
+    and (max-device-width : 480px){
+     .mobileHide { display: none;}
+  }
+</style>
+<div class="mobileShow"> Your code snippet for mobile </div>
+<div class="mobileHide"> Code snippet for desktop only </div>
+
