--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -257,6 +257,6 @@ table tr:hover {
      .mobileHide { display: none;}
   }
 </style>
-<div class="mobileShow"> Your code snippet for mobile </div>
-<div class="mobileHide"> Code snippet for desktop only </div>
+<div class="mobileShow"></div>
+<div class="mobileHide"></div>
 
