--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -90,6 +90,18 @@ layout: default
         </section><!-- End Blog Details Section -->
 </div>
         <div class="col-lg-4 sidebar">
+
+          <script type="text/javascript">
+	atOptions = {
+		'key' : '2ab137bbc77cdc9d788a3045be175511',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//wormdistressedunit.com/2ab137bbc77cdc9d788a3045be175511/invoke.js"></script>
+          
       {% include sidebar.html %}
     </div>
 
