--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -100,7 +100,7 @@ layout: default
 		'params' : {}
 	};
 </script>
-<script type="text/javascript" src="//wormdistressedunit.com/2ab137bbc77cdc9d788a3045be175511/invoke.js"></script>
+<script type="text/javascript" src="//wormdistressedunit.com/2ab137bbc77cdc9d788a3045be175511/invoke.js"></script>		
           
       {% include sidebar.html %}
     </div>
@@ -117,6 +117,10 @@ layout: default
 
 
 <style>
+
+	iframe {
+		    margin-left: 40px;
+	}
   .thumbnail-container {
   width: 100%;
   max-width: 800px;
