--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -127,7 +127,9 @@ layout: default
 <style>
 
 	iframe {
-		    margin-left: 40px;
+		margin-left: 40px;
+		margin-top: 10px;
+    	margin-bottom: 0px;
 	}
   .thumbnail-container {
   width: 100%;
