--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,3 +70,24 @@
 </body>
 
 </html>
+
+<style>
+#header {
+  padding-top: 50px;
+}
+  @media (max-width: 768px) {
+  #main {
+    padding-top: 100px;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+    .col-lg-8 {
+    padding-left: 15px;
+    padding-right: 15px;
+}
+    #footer {
+    padding-left: 8px;
+    padding-right: 8px;
+  }
+}
+  </style>
