--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -72,12 +72,12 @@
 </html>
 
 <style>
-#header {
-  padding-top: 50px;
-}
+#main {
+    padding-top: 80px;
+  
   @media (max-width: 768px) {
   #main {
-    padding-top: 100px;
+    padding-top: 80px;
     padding-left: 15px;
     padding-right: 15px;
   }
