--- a/_includes/header.html
+++ b/_includes/header.html
@@ -62,3 +62,5 @@
     });
   });
 </script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+
